<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientHomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="end">

                    <TextView
                        android:id="@+id/tv_patient_welcome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textAlignment="center"
                        />

                    <!--copy this for each patient field-->
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:textSize="16sp"
                            android:text="Full Name:"/>

                        <TextView
                            android:id="@+id/tv_patient_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:textSize="16sp"
                            android:text="Email address:"/>

                        <TextView
                            android:id="@+id/tv_patient_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:textSize="16sp"
                            android:text="Age:"/>

                        <TextView
                            android:id="@+id/tv_patient_age"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="end">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/bt_patient_prescription"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/patient_prescription_button"
                            android:layout_marginEnd="16dp"
                            />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/bt_patient_sign_out"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sign_out_button"
                            />
                    </LinearLayout>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/tv_identify_pill"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/identify_pill"
                        android:textAlignment="center"
                        android:textSize="24sp"/>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_pill_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop" />

                        <LinearLayout
                            android:visibility="gone"
                            android:id="@+id/ll_pill_details_section"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    android:textSize="16sp"
                                    android:text="Proprietary Name:" />

                                <TextView
                                    android:id="@+id/tv_pill_proprietary_name"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:layout_constraintRight_toRightOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintBottom_toBottomOf="parent"/>

                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    android:textSize="16sp"
                                    android:text="Non-Proprietary Name:"/>

                                <TextView
                                    android:id="@+id/tv_pill_non_proprietary_name"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:layout_constraintRight_toRightOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintBottom_toBottomOf="parent"/>
                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    android:textSize="16sp"
                                    android:text="NDC11Code:"/>
                                <TextView
                                    android:id="@+id/tv_pill_ndc11_code"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:layout_constraintRight_toRightOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintBottom_toBottomOf="parent"/>
                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="end">
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/bt_reset_identify_pill"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/reset_identify_pill_button"
                            android:layout_marginEnd="16dp" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/bt_goto_camera"
                            style="@style/Widget.MaterialComponents.Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:text="@string/goto_camera_button" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>